src/examples/errors/14_array_element_mismatch.veri
// Error: Array element assignment type mismatch
// Expected error: E001 - Type mismatch

fn main() {
    let mut arr: [int; 3] = [0; 3];
    arr[0] = true;
}
